--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start & cd Backend && nodemon server.js ",
+    "start": "cd Backend && nodemon server.js ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
